Spring Boot 3.5.9. Enhance exception handling in ExceptionHandlers.java to support parameter validation errors and improve error message formatting